Releasing 1.16.0 - Releasing a slightly less embarrassing concurrent crawl limits